fix: pagination button align

--- a/template/assets/style.css
+++ b/template/assets/style.css
@@ -140,7 +140,7 @@ nav > .nav-list > a:hover {
 }
 
 .pagination a {
-    display: block;
+    display: inline-block;
     height: 40px;
     width: 40px;
     background-color: #009688;
